# reliability-projects

./: .gitignore  README.md  license.txt
task_1/: .gitignore  2017_420_borodin.c  2017_420_borodin.cpp  CMakeLists.txt  Makefile  analysis.txt  custom.txt  solution.txt  states.txt  task.c  task.txt  task_1
task_2/: .gitignore  CMakeLists.txt  Makefile  abstract_lts_m12.dot  license.txt  lts_m12.dot  states.txt.dot  task.txt  ts_m1.txt  ts_m2.txt
task_2/src/: 2017_420_borodin.cpp
task_2/src/header/: args.h  assign.h  dot.h  run.h  state.h  state_mapping.h  typedefs.h
task_2/src/header/init/: code.h  code_with_state.h  state.h
task_2/src/source/: args.cpp  assign.cpp  dot.cpp  run.cpp  state.cpp
task_2/src/source/init/: code.cpp  code_with_state.cpp  state.cpp
task_2/uppaal_files/: 420_borodin_2.xpml  log.txt  query.q  states.txt
task_3/: 2017_240_borodin_3.csv  2017_240_borodin_ucomparison.txt  Makefile
task_3/part1/: 2017_240_borodin_3_1.q  2017_240_borodin_3_1.xml
task_3/part2/: 2017_240_borodin_3_3.q  2017_240_borodin_3_3.xml  system.xml
task_4/: Makefile  task_description.rst
task_4/docker/docs/: Dockerfile
task_4/docker/python/: Dockerfile
task_4/docs/: Makefile
task_4/docs/source/: algorithm.rst  conclusion.rst  conf.py  experiments.rst  index.rst  input_data_description.rst  math_problem.rst  task_description.rst
task_4/src/: generate.py  generate_samples.py  helper.js  run_multiple.py  sample_generation.py  solve.py  utils.py
task_4/src/sample_generation/: __init__.py  args.py  generation.py  xml_generation.py
(+4 files in other folders)
